--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <!-- Шапка -->
     <header class="text-center my-4">
-        <h1 class="display-4">Менеджер библиотеки фильмов</h1>
+        <h1 class="display-4">Indian Film Manager</h1>
         <p>Управление базой данных индийских фильмов</p>
     </header>
 
