--- a/Pages/Cinemas/Index.cshtml
+++ b/Pages/Cinemas/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <header class="text-center my-4">
-        <h1 class="display-6 text-primary">Список фильмов</h1>
+        <h1 class="display-6">Список фильмов</h1>
     </header>
 
     <!-- Кнопка добавления -->
@@ -15,12 +15,11 @@
     </div>
 
     <!-- Таблица фильмов -->
-    <table class="table table-striped table-hover">
-        <thead class="table-primary">
+    <table class="table table-bordered table-hover">
+        <thead class="table-dark">
             <tr>
+                <th>ID</th>
                 <th>Название фильма</th>
-                <th>Актёры</th>
-                <th>Жанры</th>
                 <th>Год выпуска</th>
                 <th>Рейтинг</th>
                 <th>Действия</th>
@@ -30,26 +29,8 @@
             @foreach (var cinema in Model.Cinemas)
             {
                 <tr>
+                    <td>@cinema.Id</td>
                     <td>@cinema.Name</td>
-                    <td>
-                        @{
-                            var actors = new List<string>();
-                            if (cinema.ActorId1.HasValue) actors.Add(cinema.Actor1Name);
-                            if (cinema.ActorId2.HasValue) actors.Add(cinema.Actor2Name);
-                            if (cinema.ActorId3.HasValue) actors.Add(cinema.Actor3Name);
-                            if (cinema.ActorId4.HasValue) actors.Add(cinema.Actor4Name);
-                            @string.Join(", ", actors)
-                        }
-                    </td>
-                    <td>
-                        @{
-                            var genres = new List<string>();
-                            if (cinema.GenreId1.HasValue) genres.Add(cinema.Genre1Name);
-                            if (cinema.GenreId2.HasValue) genres.Add(cinema.Genre2Name);
-                            if (cinema.GenreId3.HasValue) genres.Add(cinema.Genre3Name);
-                            @string.Join(", ", genres)
-                        }
-                    </td>
                     <td>@cinema.Year</td>
                     <td>@cinema.Score</td>
                     <td>
